--- a/style.css
+++ b/style.css
@@ -2,3 +2,15 @@ body{
     display: flex;
     flex-direction: column;
 }
+
+.hero{
+    display: flex;
+    flex-direction: column;
+}
+
+.header{
+    display: flex;
+    justify-content: space-between;
+}
+
+
