--- a/style.css
+++ b/style.css
@@ -9,6 +9,7 @@ body{
     display: flex;
     flex-direction: column;
     background-color: #1F2937;
+    padding: 16px;
 }
 
 .hero-header{
@@ -17,7 +18,6 @@ body{
     color: #F9FAF8;
     align-items: center;
     justify-content: space-around;
-    padding: 16px;
 }
 
 
@@ -25,31 +25,46 @@ body{
     display: flex;
     justify-content: center;
     padding: 48px;
-
 }
 
 .hero-body-container1{
     display: flex;
+    justify-content: flex-start;
     flex-direction: column;
-    width: 400px;
+    max-width: 400px;
+    gap: 16px;
 }
 
+.hero-body-container1 button{
+    align-self: flex-start;
+    background-color: #3882FE;
+    color: white;
+    padding: 4px;
+    width: 100px;
+    border-radius: 5px;
+    border: none;
+    cursor: pointer;
+}
 .hero-body-container2{
     display: flex;
     justify-content: center;
     align-items: center;
     background-color: gray;
-    width: 400px;
+    flex-grow: 1;
+    max-width: 400px;
+    padding: 0;
 }
 .hero-main-text{
     font-size: 48px;
     color: #F9FAF8;
     font-weight: 900;
+    margin: 0;
 }
 
 .hero-sec-text{
     font-size: 18px;
     color: #E5E7EB;
+    margin: 0;
 }
 
 
@@ -58,9 +73,11 @@ ul{
     list-style-type: none;
     margin: 0;
     padding: 0;
+    gap: 16px;
 }
 
 a{
     text-decoration: none;
-    color: white;
+    color: #E5E7EB;
+    font-size: 18px;
 }
