--- a/style.css
+++ b/style.css
@@ -81,3 +81,45 @@ a{
     color: #E5E7EB;
     font-size: 18px;
 }
+
+.information-container{
+    display: flex;
+    flex-direction: column;
+    padding: 16px;
+    gap: 16px;
+}
+
+.info-title{
+    font-size: 36px;
+    color: #1F2937;
+    font-weight: 900;
+    align-self: center;
+}
+
+.card-container{
+    display: flex;
+    justify-content: center;
+
+    gap: 16px;
+}
+
+.cards{
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    width: 150px;
+    text-align: center;
+}
+
+.card{
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    width: 100px;
+    height: 100px;
+    border: 1px solid #3882FE;
+    border-radius: 10px;
+}
+
+
+
